Basic Add/List/Get working
